--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <body>
         <div class="container">
             <div class="square-container">
-                <a href="" class="square" id="square1"></a>
-                <a href="" class="square" id="square2"></a>
-                <a href="" class="square" id="square3"></a>
-                <a href="" class="square" id="square4"></a>
+                <a href="https://yyg-dot.github.io/Spring/" class="square" id="square1"></a>
+                <a href="https://yyg-dot.github.io/Summer/" class="square" id="square2"></a>
+                <a href="https://yyg-dot.github.io/Autumn/" class="square" id="square3"></a>
+                <a href="https://yyg-dot.github.io/Winter/" class="square" id="square4"></a>
             </div>
             <p>
                 <span class="word-container"><span class="word word1" data-word="꽃">꽃</span><img src="icon/flower_icon.png" alt="꽃" class="icon" id="icon1" data-word="꽃" /></span>이 <span class="word-container"><span class="word word2" data-word="피었다">피었다</span><img src="icon/bloom_icon.png" alt="피었다" class="icon" id="icon2" data-word="피었다" /></span>고 너에게 <span class="word-container"><span class="word word3" data-word="쓰고">쓰고</span><img src="icon/write_little_icon.png" alt="쓰고" class="icon" id="icon3" data-word="쓰고" /></span>,<br />
